# decluter

./: CMakeLists.txt  Declutter.cpp  Declutter.hpp  data.txt  main.cpp
data/: Coordinates.cpp  Coordinates.hpp  DataConverter.cpp  DataConverter.hpp  DataSet.hpp  Point.hpp
helpers/: ErrorHandler.cpp  ErrorHandler.hpp  FileHandler.cpp  FileHandler.hpp
tests/: CMakeLists.txt  TestCoordinates.cpp  TestDataConverter.cpp  TestDeclutter.cpp  TestErrorHandler.cpp  TestFileHandler.cpp  TestMatrice.cpp
transformation/: Matrice.cpp  Matrice.hpp
